# AmbotAI

./: .gitignore  DESKTOP_PLAN.md  README.md  plan.md  pubspec.yaml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  sd_server_jni.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
landing/: index.html  package-lock.json  vercel.json  version.json
landing/api/: download.js  stats.js
lib/: app.dart  app_desktop.dart  main.dart  main_desktop.dart
lib/core/agent/: agent_provider.dart  autonomous_agent.dart
lib/core/ai/: ai_engine.dart  capability_detector.dart  default_model_service.dart  downloadable_model.dart  engine_selector.dart  image_model_manager.dart  model_downloader.dart  model_manager.dart  model_prompt.dart  model_registry.dart  model_service.dart  nemotron_safety.dart  nvidia_key_manager.dart  nvidia_models.dart  nvidia_vision.dart
lib/core/device_control/: action.dart  action_log.dart  action_registry.dart  app_registry.dart  device_controller.dart  execution_mode.dart  safety_rules.dart
lib/core/document_gen/: document_gen_service.dart  docx_generator.dart  pdf_generator.dart  smart_formatter.dart
lib/core/image_gen/: cloud_image_gen.dart  image_gen_engine.dart  image_template.dart  local_image_gen.dart  nvidia_image_gen.dart  prompt_enhancer.dart  sd_server_client.dart
lib/core/memory/: conversation_summary_store.dart  memory_entry.dart  memory_extractor.dart  memory_retriever.dart  memory_service.dart
lib/core/platform/: desktop_keyboard.dart  platform_guard.dart  window_manager.dart
lib/core/providers/: api_key_providers.dart  app_providers.dart  chat_providers.dart  engine_providers.dart  memory_providers.dart  model_manager_providers.dart  onboarding_providers.dart  roles_provider.dart  theme_provider.dart  update_providers.dart
lib/core/rag/: app_knowledge.dart  document_qa_service.dart
lib/core/roles/: default_roles.dart  role.dart  role_domain.dart
lib/core/router/: app_router.dart
lib/core/services/: chat_service.dart  connectivity.dart  conversation_store.dart  daily_limit_tracker.dart  document_reader.dart  error_boundary.dart  haptic_feedback_service.dart  secure_key_storage.dart  version_check_service.dart  web_fetch_service.dart
lib/core/storage/: output_storage_service.dart
lib/core/utils/: app_version.dart
lib/core/voice/: voice_command_parser.dart  voice_service.dart
lib/core/voice_gen/: piper_voice_gen.dart  voice_gen_engine.dart  voice_model_manager.dart
lib/features/agent/: agent_screen.dart
lib/features/ai_setup/: ai_setup_screen.dart
lib/features/chat/: chat_screen.dart  chat_utils.dart  conversation_history_screen.dart
lib/features/desktop/: desktop_chat_screen.dart  (+5 more)
test/: widget_test.dart
test/integration/: document_generation_test.dart  router_redirect_test.dart
test/provider/: api_key_providers_test.dart  chat_providers_test.dart  memory_providers_test.dart  onboarding_providers_test.dart  roles_provider_test.dart  theme_provider_test.dart
test/unit/: api_keys_test.dart  app_knowledge_test.dart  capability_detector_test.dart  chat_service_test.dart  conversation_store_test.dart  document_gen_service_test.dart  document_qa_service_test.dart  downloadable_model_test.dart  engine_selector_test.dart  memory_extractor_test.dart  memory_retriever_test.dart  memory_service_test.dart  output_storage_service_test.dart  smart_formatter_test.dart  theme_colors_test.dart  web_fetch_service_test.dart
test/widget/: api_key_section_test.dart  chat_app_bar_test.dart  chat_input_bar_test.dart  document_gen_screen_test.dart  document_stats_bar_test.dart  download_banner_test.dart  editor_toolbar_test.dart  general_chat_screen_test.dart  home_screen_test.dart  image_gen_screen_test.dart  message_bubble_test.dart  model_section_test.dart  role_card_test.dart  settings_tile_test.dart  typing_indicator_test.dart
tool/: generate_icon.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+137 files in other folders)
